[metadata]
name = virtman
version = 2014.4
summary = Openstack Fast Provisioning of Large-Scale Virtual Machine Clusters
description-file =
    README.rst
author = VMThunder
author-email = lzynudt@gmail.com
home-page = https://github.com/lihuiba/VMThunder
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    virtman

#scripts =
#    bin/virtmand

[global]
setup-hooks =
    pbr.hooks.setup_hook

#[entry_points]
#virtman.executor =
#console_scripts =
#    virtman-api = virtman.cmd.api:main

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = virtman/locale
domain = virtman

[update_catalog]
domain = virtman
output_dir = virtman/locale
input_file = virtman/locale/virtman.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = virtman/locale/virtman.pot
